2016-02-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_reset_regs): Mask all but SYNC
	irq in IMASK.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_soft_reset_dma): Implement.
	(ee_reset_regs): Clean up. Add reset_dma parameter. Enable
	clock gating. Write FSTATUS instead of STATUS.
	(ee_soft_reset_core): Use ee_soft_reset_dma. Disable timers
	early. Also check ILAT to determine that core is idle.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/src/e-read.c (main): Remove call to
	e_reset_system().
	* e-utils/src/e-write.c (main): Likewise.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_soft_reset_core): Replace
	unnecessary call to ee_reset_regs() with one write to ILATCL.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (soft_reset_payload): Add missing
	branch.
	(ee_soft_reset_core): Improve robustness. Fail on detected
	errors.
	* e-hal/src/e-loader.c (e_load_group): Check return value from
	ee_soft_reset_core().

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (e_load_group): Replace call to
	ee_reset_group() with call to ee_soft_reset_core().
	* e-hal/src/epiphany-hal-api-local.h: Add ee_soft_reset_core
	function prototype.
	* e-hal/src/epiphany-hal.c (ee_reset_regs): Implemented.
	(ee_soft_reset_core): Implemented.

2016-02-17  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (e_load_group): Call ee_reset_group.
	* e-hal/src/epiphany-hal-api-local.h: Add function prototypes
	for ee_reset_group and ee_start_group.
	* e-hal/src/epiphany-hal.c (ee_reset_group): Implemented.
	(ee_reset_core): Use ee_reset_group.
	(e_reset_group): Use ee_reset_group.
	(ee_start_group): Implemented.
	(e_start): Use ee_start_group.
	(e_start_group): Use ee_start_group.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/Makemodule.am: Add e-dump-regs target.
	* e-utils/src/e-dump-regs.c: New file.
